--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- Meta Tags Básicos -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="theme-color" content="#C75A3E" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Spanish" />
     <meta name="revisit-after" content="7 days" />
